# vd_game_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  archive.json  build.py  dpdmgr.py  package.json  postbuild.py  update.py
meta/: archive.json  config.json  resource_manager.py  update_manager.py
resources/: engine_settings.cfg  global.properties  terrain2_settings.cfg  terrain_settings.cfg  water.properties  water_settings.cfg
resources/objects/grass/: grass.mtl
resources/objects/myriam/: myriam.mtl
resources/objects/tree/: tree1.mtl  tree1_green.tga  tree7.mtl  tree8.mtl
resources/properties/: biomes.properties  flare.properties  fog.properties  light.properties  props.properties  shader.properties  shadow.properties  sky.properties  sun.properties  terrain.properties  time.properties  water.properties
resources/shaders/entity/: entity_FS.glsl  entity_VS.glsl
resources/shaders/gui/: gui_FS.glsl  gui_VS.glsl  text_FS.glsl  text_VS.glsl
resources/shaders/lib/: fog.glsl  fog_VS.glsl  light.glsl  light_FS.glsl
resources/shaders/mesh/: mesh_FS.glsl  mesh_VS.glsl
resources/shaders/particle/: particle_FS.glsl  particle_GS.glsl  particle_VS.glsl
resources/shaders/postprocessing/: blur_FS.glsl  contrast_FS.glsl  dof_FS.glsl  horizontalBlur_VS.glsl  pp_VS.glsl  to_screen_FS.glsl  verticalBlur_VS.glsl
resources/shaders/sky/: flare_FS.glsl  flare_VS.glsl  sky_FS.glsl  sky_VS.glsl
resources/shaders/sun/: sun_FS.glsl  sun_GS.glsl  sun_VS.glsl
resources/shaders/terrain/: material_lib.glsl  terrain_FS.glsl  terrain_GS.glsl  terrain_TC.glsl  terrain_TE.glsl  terrain_VS.glsl
resources/shaders/terrain2/: material_lib.glsl  terrain_FS.glsl  terrain_GS.glsl  terrain_TC.glsl  terrain_TE.glsl  terrain_VS.glsl
resources/shaders/water/: water_FS.glsl  water_VS.glsl
resources/terrain/: sand0_DIFF.tif  sand0_DISP.tif
src/: main.cpp
src/engine/camera/: Camera.cpp  Camera.hpp  CameraWrapper.cpp  CameraWrapper.hpp  ICamera.cpp  ICamera.hpp
src/engine/collision/: Detector.cpp  Detector.hpp
src/engine/component/: IEntityShader.cpp  IEntityShader.hpp  IManager.cpp  IManager.hpp  IModuleFactory.hpp  IRenderer.cpp  IRenderer.hpp  IRenderingEffectShader.hpp  IShading.hpp  RenderConfig.cpp  RenderConfig.hpp  Renderer.cpp  Renderer.hpp  RenderingEffect.cpp  RenderingEffect.hpp  RenderingPass.cpp  RenderingPass.hpp
src/engine/config/: ConfigurationFile.cpp  ConfigurationFile.hpp  EngineConfig.cpp  EngineConfig.hpp  MetaConfig.cpp  MetaConfig.hpp
src/engine/context/: Context.cpp  Context.hpp
src/engine/core/: AsyncWorker.cpp  AsyncWorker.hpp  Camera.cpp  Camera.hpp  InputHandler.cpp  InputHandler.hpp  Job.cpp  Job.hpp  ObjectManager.cpp  ObjectManager.hpp  ThreadPool.cpp  ThreadPool.hpp  Threads.hpp  Window.cpp  Window.hpp
src/engine/culling/: FrustumCullingManager.cpp  FrustumCullingManager.hpp
src/engine/datastruct/: Observer.cpp  Observer.hpp  Tree.cpp  Tree.hpp
src/engine/defines/: Actions.hpp  Buttons.hpp  Keys.hpp  Macros.hpp  Physics.hpp  RenderingPasses.hpp  Types.hpp
src/engine/event/: EventHandler.cpp  EventHandler.hpp
src/engine/exception/: Exceptions.cpp  Exceptions.hpp
src/engine/fog/: Fog.cpp  Fog.hpp  FogManager.cpp  FogManager.hpp
src/engine/foundation/: GL.hpp
src/engine/gapi/: Buffer.cpp  Buffer.hpp  Factory.cpp  Factory.hpp  Program.cpp  Program.hpp  Renderer.cpp  Renderer.hpp
src/engine/injector/: CreateAndStore.hpp  Injectable.cpp  Injectable.hpp  Linker.cpp  Linker.hpp  ObjectOfType.hpp
src/engine/kernel/: Context.cpp  Context.hpp  Engine.cpp  Engine.hpp  EngineBlock.cpp  EngineBlock.hpp  EngineFactory.cpp  EngineFactory.hpp  EngineWorker.cpp  EngineWorker.hpp
src/engine/light/: Light.cpp  Light.hpp  LightManager.cpp  LightManager.hpp
src/engine/loader/: FileLoader.cpp  FileLoader.hpp  FontLoader.cpp  FontLoader.hpp  ImageLoader.cpp  ImageLoader.hpp  ObjectLoader.cpp  ObjectLoader.hpp  PropertiesLoader.cpp  PropertiesLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp
src/engine/logger/: Logger.cpp  Logger.hpp
src/engine/math/: Bounds.cpp  Bounds.hpp  Frustum.cpp  Frustum.hpp  Interpolator.cpp  Interpolator.hpp  Plane.cpp  Plane.hpp  Transform.cpp  Transform.hpp  Utils.cpp  Utils.hpp
src/engine/misc/: ObjectOfType.hpp  Properties.cpp  Properties.hpp  Types.hpp
src/engine/model/: Font.cpp  Font.hpp  Image.cpp  Image.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp
src/engine/object/: Entity.cpp  Entity.hpp  Entity2D.cpp  Entity2D.hpp  Entity3D.cpp  Entity3D.hpp
src/engine/postprocessing/: IStageShader.hpp  MultipleInputStage.cpp  MultipleInputStage.hpp  PostProcessing.cpp  PostProcessing.hpp  SingularInputStage.cpp  SingularInputStage.hpp  Stage.cpp  Stage.hpp  StageRenderer.cpp  StageRenderer.hpp  Types.hpp
src/engine/property/: GlobalProperties.hpp  Properties.cpp  Properties.hpp
src/engine/scene/: Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  ScriptableEntity.cpp  ScriptableEntity.hpp
src/engine/service/: TextureService.cpp  TextureService.hpp
src/engine/shader/: GLSLWrapper.cpp  GLSLWrapper.hpp  Shader.cpp  Shader.hpp
src/engine/shadow/: ShadowBox.cpp  ShadowBox.hpp  ShadowManager.cpp  ShadowManager.hpp  ShadowShader.cpp  ShadowShader.hpp
src/engine/terrain/: Biome.cpp  Biome.hpp  Terrain.cpp  Terrain.hpp  TerrainConfig.cpp  TerrainConfig.hpp  TerrainNode.cpp  TerrainNode.hpp  TerrainQuadtree.cpp  TerrainQuadtree.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp  TerrainShader.cpp  TerrainShader.hpp
src/engine/time/: Time.cpp  Time.hpp  TimeManager.cpp  TimeManager.hpp
src/engine/window/: Window.cpp  Window.hpp
src/modules/: ModuleFactory.cpp  ModuleFactory.hpp
src/modules/biomes/: Biome.cpp  Biome.hpp  BiomeFactory.cpp  BiomeFactory.hpp  BiomeManager.cpp  BiomeManager.hpp
src/modules/gui/: GuiFactory.cpp  GuiFactory.hpp  GuiQuad.cpp  GuiQuad.hpp  GuiRenderer.cpp  GuiRenderer.hpp  GuiShader.cpp  GuiShader.hpp  GuiText.cpp  GuiText.hpp  GuiTextShader.cpp  GuiTextShader.hpp
(+251 files in other folders)
